--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-css": "node-sass --include-path scss scss/estilos.scss css/estilos.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
-
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "node-sass": "^9.0.0",
     "nodemon": "^3.0.1"
+  },
+  "dependencies": {
+    "bootstrap-icons": "^1.11.1",
+    "sweetalert2": "^11.8.0"
   }
 }
